kite-server/models-ingress/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: http
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8500
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: default
            virtual_hosts:
            - name: default
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  auto_host_rewrite: true
                  cluster: models
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: models
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    http2_protocol_options: { }
    load_assignment:
      cluster_name: models
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: tunable-models
                port_value: 8500
